--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/primeicons/primeicons.css';
+
+
+html, body{
+    margin: 0;
+    height: 100%;
+    font-size: 12px;
+    background-color: var(--surface-b);
+    font-family: var(--font-family);
+    padding: 0%;
+}
