--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@import '../node_modules/primeicons/primeicons.css';
-
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+/* @import '../node_modules/primeicons/primeicons.css'; */
 
 html, body{
     margin: 0;
